--- a/css/styles.css
+++ b/css/styles.css
@@ -6469,6 +6469,12 @@ p {
   background: -webkit-gradient(linear, left top, left bottom, from(#459fb5), color-stop(30%, #459fb5), color-stop(30%, white));
   background: linear-gradient(#459fb5, #459fb5 30%, white 30%);
 }
+@media screen and (max-width: 1024px) {
+  .page__anchors {
+    background: #459fb5;
+    padding-top: 0;
+  }
+}
 .page__anchors-link {
   text-decoration: none;
   color: currentColor;
@@ -6541,6 +6547,11 @@ p {
   background: -webkit-gradient(linear, left top, left bottom, from(#3eaa8b), color-stop(50%, #3eaa8b), color-stop(50%, white));
   background: linear-gradient(#3eaa8b, #3eaa8b 50%, white 50%);
 }
+@media screen and (max-width: 1024px) {
+  .webinar {
+    background: #3eaa8b;
+  }
+}
 .webinar__content {
   background-color: white;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.35);
@@ -6587,8 +6598,11 @@ p {
   height: auto;
   margin: 0.5rem auto;
 }
+.our-work__header {
+  padding-bottom: 0;
+}
 .our-work__tabs-list-wrap {
-  padding: 2rem 0;
+  padding: 0 0 2rem 0;
   background-color: #459FB5;
   background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(50%, white), color-stop(50%, #459FB5));
   background: linear-gradient(white, white 50%, #459FB5 50%);
